# godot-specs-integration

./: .gitignore  readme.md
docs/: architecture.md  example-details.md  game-details.md  godot_thread_model.md  introduction.md  todo.md
gdnative/: Cargo.toml
gdnative/game/: Cargo.toml
gdnative/game/src/: lib.rs  logger.rs
gdnative/game/src/game/: game.rs
gdnative/game/src/runners/: endless_spawner_hybrid.rs  endless_spawner_signal.rs  example_01.rs  example_02.rs  example_03.rs  example_04.rs  example_05.rs  example_06.rs  example_07.rs  hybrid_update_01.rs  mod.rs
gdnative/gd-specs/: Cargo.toml
gdnative/gd-specs/src/: components.rs  dispatchers.rs  gd_entity.rs  gd_world.rs  lib.rs
gdnative/gd-specs/src/examples/: gd_entity.rs  gd_entity_hybrid.rs  gd_world.rs  gd_world_hybrid.rs  mod.rs
gdnative/gd-specs/src/game/: common.rs  entity_node2d.rs  mod.rs  world_ref.rs
gdnative/gd-specs/src/game/entity/: mod.rs  node2d_entity.rs  sprite_entity.rs
gdnative/gd-specs/src/game/world/: mod.rs  specs_world.rs  world_registry.rs
gdnative/gd-specs/src/systems/: canvas.rs  material.rs  mod.rs  visual_server_systems.rs
gdnative/specs-engine/: Cargo.toml
gdnative/specs-engine/src/: components.rs  lib.rs  rapier.rs  resources.rs  util.rs
gdnative/specs-engine/src/components/: godot_ext.rs
gdnative/specs-engine/src/systems/: kinematic_movement.rs  mod.rs
gdnative/specs-engine/src/systems/examples/: message_passing.rs  mod.rs  movement.rs  side_effects.rs
gdnative/specs-engine/src/systems/rapier/: movement.rs
project/: project.godot
project/common/: entity.tscn  entity_hybrid.tscn  gd_world.tscn  gd_world_hybrid.tscn
project/examples/: example01.tscn  example02.tscn  example03.tscn  example04.tscn  example05.tscn  example06.tscn  example07.tscn  hybrid_update01.tscn
project/gdnative/: EndlessSpawnerHybrid.gdns  EndlessSpawnerSignals.gdns  Example01.gdns  Example02.gdns  Example03.gdns  Example04.gdns  Example05.gdns  Example06.gdns  Example07.gdns  GDEntity.gdns  GDEntityHybrid.gdns  GDWorld.gdns  GDWorldHybrid.gdns  HybridUpdate01.gdns  gdnative_library.gdnlib
project/performance_test/: hybrid.tscn  signals.tscn
project/resources/materials/: entity_material.tres  entity_shader.shader
project/resources/sprites/: cp437_IBM_bios_32x32.png.import  inverted_smile.tres  player.tres  smile.tres
